# GlowScript

./: CMakeLists.txt  README.md
include/: Lexer.hpp  Token.hpp  TokenType.hpp
src/: main.cpp
test/: teleport.glow
